erDiagram
  PATIENT {
    int id PK
    varchar nom
    varchar prenom
    varchar email
  }
  MEDECIN {
    int id PK
    varchar nom
    varchar prenom
    varchar email
  }
  RESERVATION {
    int id_reservation PK
    int patient_id
    int id_medecin
  }
  CONSULTATION {
    int id PK
    int id_reservation
    int id_medecin
    int id_type_consultation
  }
  ORDONNANCE {
    int id PK
    int id_consultation
    json medicaments
  }
  FACTURES {
    int id PK
    int rendez_vous_id
    int consultation_id
    int patient_id
    int type_consultation_id
  }
  PLANNING_MEDECIN {
    int id PK
    int id_medecin
  }
  ABSENCE_MEDECIN {
    int id PK
    int medecin_id
  }
  MESSAGERIE {
    int id PK
    int id_medecin
    int id_patient
  }
  NOTIFICATIONS {
    int id PK
    int id_medecin
    int id_secretaire
    int id_patient
    int id_reservation
  }
  RAPPORT_MEDICAL {
    int id_rapport PK
    int id_patient
    int id_consultation
    int id_ordonnance
  }
  TYPE_CONSULTATION {
    int id PK
    varchar nom
  }
  SPECIALITES_CLINIQUE {
    int id PK
    varchar nom
  }
  SECRETAIRE {
    int id PK
    varchar email
  }
  ADMINISTRATEUR {
    int id PK
    varchar email
  }

  PATIENT ||--o{ RESERVATION : "books"
  MEDECIN ||--o{ RESERVATION : "assigned"
  RESERVATION ||--o{ CONSULTATION : "may_have"
  MEDECIN ||--o{ CONSULTATION : "performs"
  TYPE_CONSULTATION ||--o{ CONSULTATION : "classifies"
  CONSULTATION ||--o{ ORDONNANCE : "generates"
  CONSULTATION ||--o{ RAPPORT_MEDICAL : "may_generate"
  PATIENT ||--o{ CONSULTATION : "undergoes"
  PATIENT ||--o{ FACTURES : "billed_by"
  CONSULTATION ||--o{ FACTURES : "billed_for"
  RESERVATION ||--o{ FACTURES : "rendezvous_billed_for"
  MEDECIN ||--o{ PLANNING_MEDECIN : "has"
  MEDECIN ||--o{ ABSENCE_MEDECIN : "has"
  MEDECIN ||--o{ MESSAGERIE : "chats"
  PATIENT ||--o{ MESSAGERIE : "chats"
  SECRETAIRE ||--o{ RESERVATION : "manages"
  ADMINISTRATEUR ||--o{ MEDECIN : "manages"
  ADMINISTRATEUR ||--o{ SECRETAIRE : "manages"
